tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/extend-defined-aot.stderr
TOML parse error at line 3, column 1
  |
3 | arr.val1=1
  | ^
duplicate key `val1`
